# cafe-front-repo

./: .gitignore  Cargo.toml  fresh.gen.ts  import_map.json
components/: Cart.tsx  MenuCard.tsx
islands/: kiosk.tsx
kiosk/: Cargo.toml  Makefile.toml
kiosk/src/: api.rs  app.rs  lib.rs  main.rs
kiosk/src/components/: initial_screen.rs  menu_card.rs  mod.rs  order_card.rs  products.rs
kiosk/static/: index.html
libs/: Cargo.toml
libs/src/: lib.rs
routes/: index.tsx
utils/: hooks.tsx  types.tsx  util.ts
