[package]
name = "kiosk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
yew = "0.19"
wasm-bindgen = { version = "0.2.79", features = ["serde-serialize"] }
wasm-bindgen-futures="0.4"
gloo = "0.6"
itertools = "0.10.3"
serde_json = "1"
serde={version="1.0", features=["derive"]}
chrono = { version = "0.4", features = ["serde"] }
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
  "EventSource",
  "Headers",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
]